k8s/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
        editor: vscode
    spec:
      containers:
        - name:  products-service
          image: kolan1992/products.service
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name:  products-cluster-ip-service
spec:
  selector:
    app:  products-service
  type:  ClusterIP
  ports:
  - name:  http
    protocol: TCP
    port:  8080
    targetPort:  8080
---
apiVersion: v1
kind: Service
metadata:
  name:  products-node-port-service
spec:
  type:  NodePort
  selector:
    app:  products-service
  ports:
  - name:  products-service
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 31001
