k8s/ingress-service.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: products-api-gateway
  labels:
    name: products-api-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: kube.demo
    http:
      paths:
      - pathType: Prefix
        path: /api(/|$)(.*)
        backend:
          service:
            name: products-cluster-ip-service
            port: 
              number: 8080
